# mishell

./: .gitignore  Cargo.toml  file_with_file.txt  files.txt  flake.nix  grepLog.txt  input.txt  readme.md  rust-toolchain.toml
lib/ast/: Cargo.toml
lib/ast/src/: ast.rs  executables_cache.rs  lexer.rs  lib.rs  parser.rs  parser_v2.rs  tokenizer.rs  tokenizer_v2.rs  tokens.rs
lib/ast/src/ast/: pipeline.rs  process_substitution.rs  program.rs  redirect.rs  word.rs
lib/ast/src/ast/command/: mod.rs  simple.rs
lib/ast/src/ast/command/arithmetic/: epxr.rs  for_clause.rs  mod.rs  operators.rs
lib/ast/src/ast/command/compound/: do_scope.rs  for_clause.rs  if_clause.rs  mod.rs  scope.rs  subshell.rs  until_clause.rs  while_clause.rs
lib/mishell_core/: Cargo.toml
lib/mishell_core/src/: engine.rs  error.rs  exec.rs  id.rs  lib.rs  sys.rs  variable_manager.rs
lib/mishell_core/src/sys/: stubs.rs
lib/mishell_core/src/sys/stubs/: signal.rs  terminal.rs
lib/mishell_core/src/sys/unix/: signal.rs  terminal.rs
lib/process/: Cargo.toml
lib/process/src/: child.rs
lib/prompt/: Cargo.toml
lib/prompt/src/: control.rs  error.rs  lib.rs  refs.rs  shell.rs
src/: events.rs  main.rs  parser.rs  test.txt  tokenizer.rs  trace.rs
