[package]
name = "ast"
version = "0.1.0"
edition = "2021"

# [lints]
# workspace = true

[dependencies]
indenter = "0.3.3"
miette = { workspace = true }
peg = "0.8.4"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utf8-chars = "3.0.5"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"