[package]
name = "mishell_core"
version = "0.1.0"
edition = "2021"

# [lints]
# workspace = true

[dependencies]
ast = { path = "../ast", version = "*" }

miette = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob = "0.3.2"